[MI-3421]: Fixed the alignment of button on the Jira Subscriptions page (#65)
* [MI-3241]: Fixed the alignment of Create Subscription button on the Jira Subscriptions page

* [MI-3421]: Grouped the margin css

--- a/webapp/src/components/modals/channel_subscriptions/channel_subscriptions_modal.scss
+++ b/webapp/src/components/modals/channel_subscriptions/channel_subscriptions_modal.scss
@@ -41,4 +41,11 @@
             }
         }
     }
+
+    .title-message {
+        justify-content: space-between;
+        h2 {
+            margin: 15px 0;
+        }
+    }
 }
